Daskified preprocessing, made some comments based on meeting witSpatial Catalyst

--- a/preprocess_SpatialData.ipynb
+++ b/preprocess_SpatialData.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,19 @@
     "import spatialdata as sd\n",
     "import os\n",
     "import yaml\n",
-    "from functions.processing_utils import *\n",
+    "# from functions.processing_utils import *\n",
     "import numpy as np\n",
     "import cv2\n",
+    "from functions.processing_utils import *\n",
     "from dask_image.ndfilters import maximum_filter, minimum_filter\n",
     "import dask.array as da \n",
-    "from spatialdata.models import Image2DModel, Labels2DModel, Labels3DModel\n",
-    "from skimage.morphology import remove_small_objects"
+    "from functions.utils import remove_small_objects_dask\n",
+    "from spatialdata.models import Image2DModel, Labels2DModel, Labels3DModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,72 +122,93 @@
        "      ├── 'E2M1FloxControl_artefacts': SpatialImage[zyx] (5, 7533, 16659)\n",
        "      ├── 'E2M1FloxControl_cut_mask': SpatialImage[yx] (7533, 16659)\n",
        "      ├── 'E2M1FloxControl_vein_segments': SpatialImage[yx] (7533, 16659)\n",
+       "      ├── 'E2M1FloxControl_zonation': SpatialImage[yx] (7533, 16659)\n",
        "      ├── 'E2M3FloxControl_artefacts': SpatialImage[zyx] (5, 11178, 18468)\n",
        "      ├── 'E2M3FloxControl_cut_mask': SpatialImage[yx] (11178, 18468)\n",
        "      ├── 'E2M3FloxControl_vein_segments': SpatialImage[yx] (11178, 18468)\n",
+       "      ├── 'E2M3FloxControl_zonation': SpatialImage[yx] (11178, 18468)\n",
        "      ├── 'E2M5FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 12987)\n",
        "      ├── 'E2M5FloxControl_cut_mask': SpatialImage[yx] (9342, 12987)\n",
        "      ├── 'E2M5FloxControl_vein_segments': SpatialImage[yx] (9342, 12987)\n",
+       "      ├── 'E2M5FloxControl_zonation': SpatialImage[yx] (9342, 12987)\n",
        "      ├── 'E2M6FloxControl_artefacts': SpatialImage[zyx] (5, 11205, 14823)\n",
        "      ├── 'E2M6FloxControl_cut_mask': SpatialImage[yx] (11205, 14823)\n",
        "      ├── 'E2M6FloxControl_vein_segments': SpatialImage[yx] (11205, 14823)\n",
+       "      ├── 'E2M6FloxControl_zonation': SpatialImage[yx] (11205, 14823)\n",
        "      ├── 'E2M7FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 16632)\n",
        "      ├── 'E2M7FloxControl_cut_mask': SpatialImage[yx] (9342, 16632)\n",
        "      ├── 'E2M7FloxControl_vein_segments': SpatialImage[yx] (9342, 16632)\n",
+       "      ├── 'E2M7FloxControl_zonation': SpatialImage[yx] (9342, 16632)\n",
        "      ├── 'E2M8FloxControl_artefacts': SpatialImage[zyx] (5, 7533, 14823)\n",
        "      ├── 'E2M8FloxControl_cut_mask': SpatialImage[yx] (7533, 14823)\n",
        "      ├── 'E2M8FloxControl_vein_segments': SpatialImage[yx] (7533, 14823)\n",
+       "      ├── 'E2M8FloxControl_zonation': SpatialImage[yx] (7533, 14823)\n",
        "      ├── 'E2M15FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 14823)\n",
        "      ├── 'E2M15FloxControl_cut_mask': SpatialImage[yx] (9342, 14823)\n",
        "      ├── 'E2M15FloxControl_vein_segments': SpatialImage[yx] (9342, 14823)\n",
+       "      ├── 'E2M15FloxControl_zonation': SpatialImage[yx] (9342, 14823)\n",
        "      ├── 'E2M16FloxControl_artefacts': SpatialImage[zyx] (5, 16632, 14823)\n",
        "      ├── 'E2M16FloxControl_cut_mask': SpatialImage[yx] (16632, 14823)\n",
        "      ├── 'E2M16FloxControl_vein_segments': SpatialImage[yx] (16632, 14823)\n",
+       "      ├── 'E2M16FloxControl_zonation': SpatialImage[yx] (16632, 14823)\n",
        "      ├── 'E4M7FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 16632)\n",
        "      ├── 'E4M7FloxControl_cut_mask': SpatialImage[yx] (9342, 16632)\n",
        "      ├── 'E4M7FloxControl_vein_segments': SpatialImage[yx] (9342, 16632)\n",
+       "      ├── 'E4M7FloxControl_zonation': SpatialImage[yx] (9342, 16632)\n",
        "      ├── 'E4M14FloxControl_artefacts': SpatialImage[zyx] (5, 7533, 14823)\n",
        "      ├── 'E4M14FloxControl_cut_mask': SpatialImage[yx] (7533, 14823)\n",
        "      ├── 'E4M14FloxControl_vein_segments': SpatialImage[yx] (7533, 14823)\n",
+       "      ├── 'E4M14FloxControl_zonation': SpatialImage[yx] (7533, 14823)\n",
        "      ├── 'E4M16FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 16659)\n",
        "      ├── 'E4M16FloxControl_cut_mask': SpatialImage[yx] (9342, 16659)\n",
        "      ├── 'E4M16FloxControl_vein_segments': SpatialImage[yx] (9342, 16659)\n",
+       "      ├── 'E4M16FloxControl_zonation': SpatialImage[yx] (9342, 16659)\n",
        "      ├── 'E4M18FloxControl_artefacts': SpatialImage[zyx] (5, 16632, 9342)\n",
        "      ├── 'E4M18FloxControl_cut_mask': SpatialImage[yx] (16632, 9342)\n",
        "      ├── 'E4M18FloxControl_vein_segments': SpatialImage[yx] (16632, 9342)\n",
+       "      ├── 'E4M18FloxControl_zonation': SpatialImage[yx] (16632, 9342)\n",
        "      ├── 'E5M1FloxControl_artefacts': SpatialImage[zyx] (5, 18468, 9342)\n",
        "      ├── 'E5M1FloxControl_cut_mask': SpatialImage[yx] (18468, 9342)\n",
        "      ├── 'E5M1FloxControl_vein_segments': SpatialImage[yx] (18468, 9342)\n",
+       "      ├── 'E5M1FloxControl_zonation': SpatialImage[yx] (18468, 9342)\n",
        "      ├── 'E5M2FloxControl_artefacts': SpatialImage[zyx] (5, 18252, 9207)\n",
        "      ├── 'E5M2FloxControl_cut_mask': SpatialImage[yx] (18252, 9207)\n",
        "      ├── 'E5M2FloxControl_vein_segments': SpatialImage[yx] (18252, 9207)\n",
+       "      ├── 'E5M2FloxControl_zonation': SpatialImage[yx] (18252, 9207)\n",
        "      ├── 'E5M4FloxControl_artefacts': SpatialImage[zyx] (5, 9396, 18468)\n",
        "      ├── 'E5M4FloxControl_cut_mask': SpatialImage[yx] (9396, 18468)\n",
        "      ├── 'E5M4FloxControl_vein_segments': SpatialImage[yx] (9396, 18468)\n",
+       "      ├── 'E5M4FloxControl_zonation': SpatialImage[yx] (9396, 18468)\n",
        "      ├── 'E5M6FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 14823)\n",
        "      ├── 'E5M6FloxControl_cut_mask': SpatialImage[yx] (9342, 14823)\n",
        "      ├── 'E5M6FloxControl_vein_segments': SpatialImage[yx] (9342, 14823)\n",
+       "      ├── 'E5M6FloxControl_zonation': SpatialImage[yx] (9342, 14823)\n",
        "      ├── 'E5M13FloxControl_artefacts': SpatialImage[zyx] (5, 9342, 14877)\n",
        "      ├── 'E5M13FloxControl_cut_mask': SpatialImage[yx] (9342, 14877)\n",
        "      ├── 'E5M13FloxControl_vein_segments': SpatialImage[yx] (9342, 14877)\n",
+       "      ├── 'E5M13FloxControl_zonation': SpatialImage[yx] (9342, 14877)\n",
        "      ├── 'E5M19FloxControl_artefacts': SpatialImage[zyx] (5, 7533, 18468)\n",
        "      ├── 'E5M19FloxControl_cut_mask': SpatialImage[yx] (7533, 18468)\n",
        "      ├── 'E5M19FloxControl_vein_segments': SpatialImage[yx] (7533, 18468)\n",
+       "      ├── 'E5M19FloxControl_zonation': SpatialImage[yx] (7533, 18468)\n",
        "      ├── 'E5M20FloxControl_artefacts': SpatialImage[zyx] (5, 9369, 14823)\n",
        "      ├── 'E5M20FloxControl_cut_mask': SpatialImage[yx] (9369, 14823)\n",
        "      ├── 'E5M20FloxControl_vein_segments': SpatialImage[yx] (9369, 14823)\n",
+       "      ├── 'E5M20FloxControl_zonation': SpatialImage[yx] (9369, 14823)\n",
        "      ├── 'E5M22FloxControl_artefacts': SpatialImage[zyx] (5, 11178, 14823)\n",
        "      ├── 'E5M22FloxControl_cut_mask': SpatialImage[yx] (11178, 14823)\n",
        "      ├── 'E5M22FloxControl_vein_segments': SpatialImage[yx] (11178, 14823)\n",
+       "      ├── 'E5M22FloxControl_zonation': SpatialImage[yx] (11178, 14823)\n",
        "      ├── 'E5M23FloxControl_artefacts': SpatialImage[zyx] (5, 7533, 14823)\n",
        "      ├── 'E5M23FloxControl_cut_mask': SpatialImage[yx] (7533, 14823)\n",
-       "      └── 'E5M23FloxControl_vein_segments': SpatialImage[yx] (7533, 14823)\n",
+       "      ├── 'E5M23FloxControl_vein_segments': SpatialImage[yx] (7533, 14823)\n",
+       "      └── 'E5M23FloxControl_zonation': SpatialImage[yx] (7533, 14823)\n",
        "with coordinate systems:\n",
        "▸ 'global', with elements:\n",
-       "        E2M1FloxControl_preprocessed (Images), E2M1FloxControl_raw (Images), E2M3FloxControl_preprocessed (Images), E2M3FloxControl_raw (Images), E2M5FloxControl_preprocessed (Images), E2M5FloxControl_raw (Images), E2M6FloxControl_preprocessed (Images), E2M6FloxControl_raw (Images), E2M7FloxControl_preprocessed (Images), E2M7FloxControl_raw (Images), E2M8FloxControl_preprocessed (Images), E2M8FloxControl_raw (Images), E2M15FloxControl_preprocessed (Images), E2M15FloxControl_raw (Images), E2M16FloxControl_preprocessed (Images), E2M16FloxControl_raw (Images), E4M7FloxControl_preprocessed (Images), E4M7FloxControl_raw (Images), E4M14FloxControl_preprocessed (Images), E4M14FloxControl_raw (Images), E4M16FloxControl_preprocessed (Images), E4M16FloxControl_raw (Images), E4M18FloxControl_preprocessed (Images), E4M18FloxControl_raw (Images), E5M1FloxControl_preprocessed (Images), E5M1FloxControl_raw (Images), E5M2FloxControl_preprocessed (Images), E5M2FloxControl_raw (Images), E5M4FloxControl_preprocessed (Images), E5M4FloxControl_raw (Images), E5M6FloxControl_preprocessed (Images), E5M6FloxControl_raw (Images), E5M13FloxControl_preprocessed (Images), E5M13FloxControl_raw (Images), E5M19FloxControl_preprocessed (Images), E5M19FloxControl_raw (Images), E5M20FloxControl_preprocessed (Images), E5M20FloxControl_raw (Images), E5M22FloxControl_preprocessed (Images), E5M22FloxControl_raw (Images), E5M23FloxControl_preprocessed (Images), E5M23FloxControl_raw (Images), test (Images), E2M1FloxControl_artefacts (Labels), E2M1FloxControl_cut_mask (Labels), E2M1FloxControl_vein_segments (Labels), E2M3FloxControl_artefacts (Labels), E2M3FloxControl_cut_mask (Labels), E2M3FloxControl_vein_segments (Labels), E2M5FloxControl_artefacts (Labels), E2M5FloxControl_cut_mask (Labels), E2M5FloxControl_vein_segments (Labels), E2M6FloxControl_artefacts (Labels), E2M6FloxControl_cut_mask (Labels), E2M6FloxControl_vein_segments (Labels), E2M7FloxControl_artefacts (Labels), E2M7FloxControl_cut_mask (Labels), E2M7FloxControl_vein_segments (Labels), E2M8FloxControl_artefacts (Labels), E2M8FloxControl_cut_mask (Labels), E2M8FloxControl_vein_segments (Labels), E2M15FloxControl_artefacts (Labels), E2M15FloxControl_cut_mask (Labels), E2M15FloxControl_vein_segments (Labels), E2M16FloxControl_artefacts (Labels), E2M16FloxControl_cut_mask (Labels), E2M16FloxControl_vein_segments (Labels), E4M7FloxControl_artefacts (Labels), E4M7FloxControl_cut_mask (Labels), E4M7FloxControl_vein_segments (Labels), E4M14FloxControl_artefacts (Labels), E4M14FloxControl_cut_mask (Labels), E4M14FloxControl_vein_segments (Labels), E4M16FloxControl_artefacts (Labels), E4M16FloxControl_cut_mask (Labels), E4M16FloxControl_vein_segments (Labels), E4M18FloxControl_artefacts (Labels), E4M18FloxControl_cut_mask (Labels), E4M18FloxControl_vein_segments (Labels), E5M1FloxControl_artefacts (Labels), E5M1FloxControl_cut_mask (Labels), E5M1FloxControl_vein_segments (Labels), E5M2FloxControl_artefacts (Labels), E5M2FloxControl_cut_mask (Labels), E5M2FloxControl_vein_segments (Labels), E5M4FloxControl_artefacts (Labels), E5M4FloxControl_cut_mask (Labels), E5M4FloxControl_vein_segments (Labels), E5M6FloxControl_artefacts (Labels), E5M6FloxControl_cut_mask (Labels), E5M6FloxControl_vein_segments (Labels), E5M13FloxControl_artefacts (Labels), E5M13FloxControl_cut_mask (Labels), E5M13FloxControl_vein_segments (Labels), E5M19FloxControl_artefacts (Labels), E5M19FloxControl_cut_mask (Labels), E5M19FloxControl_vein_segments (Labels), E5M20FloxControl_artefacts (Labels), E5M20FloxControl_cut_mask (Labels), E5M20FloxControl_vein_segments (Labels), E5M22FloxControl_artefacts (Labels), E5M22FloxControl_cut_mask (Labels), E5M22FloxControl_vein_segments (Labels), E5M23FloxControl_artefacts (Labels), E5M23FloxControl_cut_mask (Labels), E5M23FloxControl_vein_segments (Labels)"
+       "        E2M1FloxControl_preprocessed (Images), E2M1FloxControl_raw (Images), E2M3FloxControl_preprocessed (Images), E2M3FloxControl_raw (Images), E2M5FloxControl_preprocessed (Images), E2M5FloxControl_raw (Images), E2M6FloxControl_preprocessed (Images), E2M6FloxControl_raw (Images), E2M7FloxControl_preprocessed (Images), E2M7FloxControl_raw (Images), E2M8FloxControl_preprocessed (Images), E2M8FloxControl_raw (Images), E2M15FloxControl_preprocessed (Images), E2M15FloxControl_raw (Images), E2M16FloxControl_preprocessed (Images), E2M16FloxControl_raw (Images), E4M7FloxControl_preprocessed (Images), E4M7FloxControl_raw (Images), E4M14FloxControl_preprocessed (Images), E4M14FloxControl_raw (Images), E4M16FloxControl_preprocessed (Images), E4M16FloxControl_raw (Images), E4M18FloxControl_preprocessed (Images), E4M18FloxControl_raw (Images), E5M1FloxControl_preprocessed (Images), E5M1FloxControl_raw (Images), E5M2FloxControl_preprocessed (Images), E5M2FloxControl_raw (Images), E5M4FloxControl_preprocessed (Images), E5M4FloxControl_raw (Images), E5M6FloxControl_preprocessed (Images), E5M6FloxControl_raw (Images), E5M13FloxControl_preprocessed (Images), E5M13FloxControl_raw (Images), E5M19FloxControl_preprocessed (Images), E5M19FloxControl_raw (Images), E5M20FloxControl_preprocessed (Images), E5M20FloxControl_raw (Images), E5M22FloxControl_preprocessed (Images), E5M22FloxControl_raw (Images), E5M23FloxControl_preprocessed (Images), E5M23FloxControl_raw (Images), test (Images), E2M1FloxControl_artefacts (Labels), E2M1FloxControl_cut_mask (Labels), E2M1FloxControl_vein_segments (Labels), E2M1FloxControl_zonation (Labels), E2M3FloxControl_artefacts (Labels), E2M3FloxControl_cut_mask (Labels), E2M3FloxControl_vein_segments (Labels), E2M3FloxControl_zonation (Labels), E2M5FloxControl_artefacts (Labels), E2M5FloxControl_cut_mask (Labels), E2M5FloxControl_vein_segments (Labels), E2M5FloxControl_zonation (Labels), E2M6FloxControl_artefacts (Labels), E2M6FloxControl_cut_mask (Labels), E2M6FloxControl_vein_segments (Labels), E2M6FloxControl_zonation (Labels), E2M7FloxControl_artefacts (Labels), E2M7FloxControl_cut_mask (Labels), E2M7FloxControl_vein_segments (Labels), E2M7FloxControl_zonation (Labels), E2M8FloxControl_artefacts (Labels), E2M8FloxControl_cut_mask (Labels), E2M8FloxControl_vein_segments (Labels), E2M8FloxControl_zonation (Labels), E2M15FloxControl_artefacts (Labels), E2M15FloxControl_cut_mask (Labels), E2M15FloxControl_vein_segments (Labels), E2M15FloxControl_zonation (Labels), E2M16FloxControl_artefacts (Labels), E2M16FloxControl_cut_mask (Labels), E2M16FloxControl_vein_segments (Labels), E2M16FloxControl_zonation (Labels), E4M7FloxControl_artefacts (Labels), E4M7FloxControl_cut_mask (Labels), E4M7FloxControl_vein_segments (Labels), E4M7FloxControl_zonation (Labels), E4M14FloxControl_artefacts (Labels), E4M14FloxControl_cut_mask (Labels), E4M14FloxControl_vein_segments (Labels), E4M14FloxControl_zonation (Labels), E4M16FloxControl_artefacts (Labels), E4M16FloxControl_cut_mask (Labels), E4M16FloxControl_vein_segments (Labels), E4M16FloxControl_zonation (Labels), E4M18FloxControl_artefacts (Labels), E4M18FloxControl_cut_mask (Labels), E4M18FloxControl_vein_segments (Labels), E4M18FloxControl_zonation (Labels), E5M1FloxControl_artefacts (Labels), E5M1FloxControl_cut_mask (Labels), E5M1FloxControl_vein_segments (Labels), E5M1FloxControl_zonation (Labels), E5M2FloxControl_artefacts (Labels), E5M2FloxControl_cut_mask (Labels), E5M2FloxControl_vein_segments (Labels), E5M2FloxControl_zonation (Labels), E5M4FloxControl_artefacts (Labels), E5M4FloxControl_cut_mask (Labels), E5M4FloxControl_vein_segments (Labels), E5M4FloxControl_zonation (Labels), E5M6FloxControl_artefacts (Labels), E5M6FloxControl_cut_mask (Labels), E5M6FloxControl_vein_segments (Labels), E5M6FloxControl_zonation (Labels), E5M13FloxControl_artefacts (Labels), E5M13FloxControl_cut_mask (Labels), E5M13FloxControl_vein_segments (Labels), E5M13FloxControl_zonation (Labels), E5M19FloxControl_artefacts (Labels), E5M19FloxControl_cut_mask (Labels), E5M19FloxControl_vein_segments (Labels), E5M19FloxControl_zonation (Labels), E5M20FloxControl_artefacts (Labels), E5M20FloxControl_cut_mask (Labels), E5M20FloxControl_vein_segments (Labels), E5M20FloxControl_zonation (Labels), E5M22FloxControl_artefacts (Labels), E5M22FloxControl_cut_mask (Labels), E5M22FloxControl_vein_segments (Labels), E5M22FloxControl_zonation (Labels), E5M23FloxControl_artefacts (Labels), E5M23FloxControl_cut_mask (Labels), E5M23FloxControl_vein_segments (Labels), E5M23FloxControl_zonation (Labels)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +225,7 @@
     "### Perform preprocessing and save preprocessed image in same SpatialData object\n",
     "Preprocessing steps:\n",
     "\n",
-    "    - Tiling Correction TODO\n",
+    "    - Tiling Correction: Not for CZI images! Too much work for too little gain\n",
     "    - Minmax Filtering\n",
     "    - Outlier removal (i.e. extremely fluorescent imaging artefacts such as    dust particles)\n",
     "    - Histogram equalization\n",
@@ -236,8 +258,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# select raw image file\n",
     "nb_of_files = len(file_names)\n",
     "for count, file_name in enumerate(file_names, start = 1):\n",
@@ -252,13 +272,13 @@
     "    for ch in range(nb_channels):\n",
     "\n",
     "        # Tiling Correction\n",
-    "        # TODO\n",
+    "        # Not for SlideScanner images!\n",
     "\n",
     "        # Minmax filtering\n",
     "        channel_filter = minimum_filter(image[ch], minmax_filter_size)\n",
     "        filtered_chanel = image[ch] - maximum_filter(channel_filter, minmax_filter_size)\n",
     "\n",
-    "        # Detect outliers, compensate them and store their segments in SpatialData.labels\n",
+    "        # Detect outliers, reduce them and store their segments in SpatialData.labels\n",
     "        median_value = np.percentile(filtered_chanel.flatten(), 50)\n",
     "        # Outliers can only be very high => ignore lower-than-median values\n",
     "        q95 = np.percentile(filtered_chanel[filtered_chanel > median_value].flatten(), 95)[0]\n",
@@ -267,11 +287,11 @@
     "        filtered_chanel[outliers] = np.int32(q95)\n",
     "\n",
     "        # Get larger artefacts from outliers and store them in artefact_masks_array\n",
-    "        larger_artefacts = remove_small_objects(outliers.compute(), min_size=artifact_size_threshold)\n",
+    "        larger_artefacts = remove_small_objects_dask(outliers, min_size=artifact_size_threshold)\n",
     "        artefact_masks_array[ch] = da.asarray(larger_artefacts, dtype=bool)\n",
     "\n",
     "        # Clahe \n",
-    "        contr_enhanhanced_image = clahe.apply(filtered_chanel.compute())  #BAD! TODO This reads full array in memory! Make it lazy! \n",
+    "        contr_enhanhanced_image = clahe.apply(filtered_chanel)  #BAD! TODO This reads full array in memory! Make it lazy! \n",
     "        \n",
     "        # Normalize to 0-65535 range\n",
     "        rescaled_image = minmax_rescaling(contr_enhanhanced_image, feature_range=(0, 65535), dtype=np.uint16)\n",
