--- a/segment_portal_and_central_regions.ipynb
+++ b/segment_portal_and_central_regions.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "central_quantile_threshold = 85\n",
     "\n",
-    "morph_structuring_kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (30,30))"
+    "morph_structuring_kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (30,30)).astype(np.uint8)"
    ]
   },
   {
